# sqlite-maxminddb

./: .gitignore  CMakeLists.txt  LICENCE.txt  LICENSE.md  Makefile  README.md  build.bat  maxminddb.h  min_test.sh  sqlite3_maxminddb.c
.github/workflows/: build_cmake.yaml  cmake-multi-platform.yml
cmake/: CPPCheck.cmake  Doxygen.cmake  FindSQLiteCross.cmake  MaxMindDB.cmake  Options.cmake  Valgrind.cmake
docs/: Doxyfile.in
source/: maxminddb.h  sqlite3_maxminddb.c
